Make the maximum number of event_ids configurable
